--- a/SharedCode/build.gradle
+++ b/SharedCode/build.gradle
@@ -44,7 +44,7 @@ kotlin {
             implementation "io.ktor:ktor-client-android:$ktor_version"
         }
 
-        iosMain.dependencies {
+        iOSMain.dependencies {
             implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:$coroutines_version"
             implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$serialization_version"
             implementation "io.ktor:ktor-client-gson:$ktor_version"
